2002-12-04  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-p.h:
	* src/register/ledger-core/split-register.h:
	  move handle_exchange() API from -p.h to .h to export it
	  for the menus to call.

2002-12-03  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-control.c:
	  export the 'handle_exchange()' interface
	* src/register/ledger-core/split-register-p.h:
	  add the 'handle_exchange()' prototype
	* src/register/ledger-core/split-register.c:
	  call handle_exchange() from the save() function to make sure we
	  have an exchange rate if the user hits "Enter" instead of
	  tabbing off the end.  For the record, the logic of the register
	  is HORRIBLE, in that there are multiple code paths to deal with
	  moving the "current location" depending on _how_ you move!  This
	  is awful, and means you need a lot of duplicated code to deal
	  with all the different corner cases.  Someone should re-write
	  this all.

	  Closed bug # 97690
	
2002-12-03  David Hampton  <hampton@employees.org>

	* src/scm/main.scm ((gnc:account-file-to-load)): Normalize the
	path name before using it to open a config files. #90487

	* src/scm/path.scm (gnc:load-user-config-if-needed): Write out a
	new 1.8 version of the config file. Add the 1.8 version to the
	list of files to try an read when reading the config. #100266

	* src/engine/gnc-session.c (gnc_session_load): Don't erase the
	just loaded account information because the backend is reporting
	that the file is from a previous version.  Let the caller decide
	after querying the user. #97270.

	* src/gnome/window-main.c (gnc_main_window_about_cb): Put the
	build date into the about box for development versions of
	gnucash. #99775

	* src/register/ledger-core/split-register-control.c
	(gnc_split_register_move_cursor): Don't delete an empty split if
	its the current transaction split. Dangling pointers are no
	fun. #99774

2002-12-02  Chris Lyttle  <chris@wilddev.net>
